# MOAMOA_AD5940_BGM220_test

./: .cproject  .project  .projectlinkstore  BGM220Port.c  app.c  main.c  readme.md  spidrv_master_baremetal.c  spidrv_master_baremetal.h  test.pintool  test.slcp  test.slps  test.sls  vscode.conf
.pdm/: uc.module.setup.componentSetup.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucTemplate.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
.uceditor/: .test.emlib_gpio_simple_initAD5940_INT.cedit  .test.emlib_gpio_simple_initAD5940_Rst.cedit  .test.emlib_gpio_simple_initCS.cedit  .test.iostream_eusartvcom.cedit  .test.spidrvexp.cedit
GNU ARM v12.2.1 - Default/: BGM220Port.d  app.d  main.d  makefile  sources.mk  spidrv_master_baremetal.d  subdir.mk  test.hex  test.map  test.out  test.s37
GNU ARM v12.2.1 - Default/ad5940lib/: AD5940Main.d  SqrWaveVoltammetry.d  ad5940.d  subdir.mk
GNU ARM v12.2.1 - Default/autogen/: sl_board_default_init.d  sl_device_init_clocks.d  sl_emlib_gpio_simple_init.d  sl_event_handler.d  sl_iostream_handles.d  subdir.mk  (+2 more)
ad5940lib/: AD5940Main.c
autogen/: .crc_config.crc  linkerfile.ld  sl_component_catalog.h  sl_emlib_gpio_simple_init.c  sl_event_handler.c
config/: pin_config.h  sl_board_control_config.h  sl_device_init_lfxo_config.h  sl_emlib_gpio_init_AD5940_INT_config.h  sl_emlib_gpio_init_AD5940_Rst_config.h  sl_emlib_gpio_init_CS_config.h  sl_iostream_eusart_vcom_config.h  sl_mx25_flash_shutdown_usart_config.h  sl_spidrv_exp_config.h
test_cmake/: CMakeLists.txt  CMakePresets.json  test.cmake  test_project.cmake
(+61 files in other folders)
